--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,15 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
   <script>
-    var firebaseConfig = {
-      // TODO: Add your our config here
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBsd9-D2_ZSbpM699DudwVrUxir0onJOdw",
+      authDomain: "fir-playground-aee0f.firebaseapp.com",
+      projectId: "fir-playground-aee0f",
+      storageBucket: "fir-playground-aee0f.appspot.com",
+      messagingSenderId: "452628713113",
+      appId: "1:452628713113:web:52ae06f6fed34c1488b208",
+      measurementId: "G-JRTBESX2R9"
     };
     firebase.initializeApp(firebaseConfig);
   </script>
